spacing fix

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -8,7 +8,7 @@
 
 .more {
 	margin-top: 200px;
-	margin-bottom: 200px;
+	margin-bottom: 400px;
 }
 
 .focus {
@@ -17,7 +17,7 @@
 
 .explain {
   font-size: 3.3em;
-  padding-top: 100px;
+  padding-top: 200px;
   margin-bottom: 60px;
   line-height: 60px;
   margin: 0 auto;
